--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,12 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to Omaha #{title}
-  button(type="button", class="btn btn-primary", onclick="update()") Press Me
-  br
-  br
-  div(id = "target") 
-    b Display
-    a(href='/shopperstop') shopperstop page link
-  script.
-   var client_count=0;
-
-     function update()
-      {
-       client_count = client_count+1;
-       document.getElementById("target").innerHTML=`Value now ${client_count}`;
-     }
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/shopperstops") Take me to shopperstop 
+    br 
+    a(href="/logout") Logout 
