--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,6 @@ block content
     a(href="/register") Register 
   if (user) 
     p You are currently logged in as #{user.username} 
-    a(href="/shopperstops") Take me to shopperstop 
+    a(href="/shopperstop") Take me to shopperstop 
     br 
     a(href="/logout") Logout 
