--- a/views/shopperstopcreate.pug
+++ b/views/shopperstopcreate.pug
@@ -9,7 +9,7 @@ block content
         input#Itemname(type='text', name='Itemname') 
     div.form-group 
         label.shopperstopAttr(for='Quantity') Shopperstop Quantity 
-        input#Quantity(type='number', name='Quantity') 
+        input#Quantity(type='number', name='Quantity',max=5) 
     div.form-group 
         label.shopperstopAttr(for='price') Shopperstop price 
         input#price(type='number', name='price') 
