--- a/views/shopperstop.pug
+++ b/views/shopperstop.pug
@@ -14,6 +14,6 @@ block content
   div(class='container-fluid')
     div(class='row m-1')
       each o, c in items 
-        - let destination = `dispatch(\"/shopperstops/update?id=${o._id}\")` 
+        - let destination = `dispatch(\"/shopperstop/update?id=${o._id}\")` 
         div(class='row-sm-3 m-1' onclick=`buy(${c})`) #{o} 
         button.btn( class="btn-primary ml-1", onclick= destination) Update 
