--- a/views/shopperstop.pug
+++ b/views/shopperstop.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  - let creatpage = `dispatch(\"/shopperstop/create")`
+  button.btn( class="btn-primary ml-1", onclick= creatpage) Create   
   h1= title
   - let items = results; 
   - let o;
@@ -14,6 +16,10 @@ block content
   div(class='container-fluid')
     div(class='row m-1')
       each o, c in items 
-        - let destination = `dispatch(\"/shopperstop/update?id=${o._id}\")` 
+        - let destination = `dispatch(\"/shopperstop/update?id=${o._id}\")`
+        - let detailpage  = `dispatch(\"/shopperstop/detail?id=${o._id}\")`
+        - let deletepage  = `dispatch(\"/shopperstop/delete?id=${o._id}\")`
         div(class='row-sm-3 m-1' onclick=`buy(${c})`) #{o} 
         button.btn( class="btn-primary ml-1", onclick= destination) Update 
+        button.btn( class="btn-primary ml-1", onclick= detailpage) Detail 
+        button.btn( class="btn-primary ml-1", onclick= deletepage) Delete 
